--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,9 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
 set -g prefix2 C-s
 
 # start window numbers at 1 to match keyboard order with tmux window order
