--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,12 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/double/blue'
+
 set -g prefix2 C-s
 
 # start window numbers at 1 to match keyboard order with tmux window order
@@ -43,4 +49,7 @@ set -g history-limit 10000
 bind-key C-b send-prefix
 # prefix-2 -> forward-incremental-history-search
 bind-key C-s send-prefix -2
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
 
