More fun with tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/double/blue'
 
-set -g prefix2 C-s
+set -g prefix2 C-a
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -35,12 +35,12 @@ set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+# set -g status-bg '#666666'
+# set -g status-fg '#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+# set -g status-left ''
+# set -g status-right ''
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -48,7 +48,10 @@ set -g history-limit 10000
 # prefix -> back-one-character
 bind-key C-b send-prefix
 # prefix-2 -> forward-incremental-history-search
-bind-key C-s send-prefix -2
+bind-key C-a send-prefix -2
+
+# mouse
+set -g mouse on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
